--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 body {
     background-color: #cbd5e1;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -44,4 +46,10 @@ body {
 
 .del {
     background-color: #b91c1c;
+}
+
+.add {
+    padding: 10px 20px;
+    border-radius: 20px;
+    margin-top: 40px;
 }
