--- a/style.css
+++ b/style.css
@@ -53,3 +53,24 @@ body {
     border-radius: 20px;
     margin-top: 40px;
 }
+
+dialog {
+    opacity: 0;
+    padding: 40px 60px;
+    font-size: 1.4rem;
+    border: none;
+    border-radius: 20px;
+}
+
+dialog input {
+    border-radius: 30px;
+    padding: 5px;
+}
+
+dialog[open] {
+    opacity: 1;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40vh;
+    margin-left: 40vw;
+}
